[package]
name = "osmia-npm"
version = "0.7.0"
authors = ["jkutkut <45950243+Jkutkut@users.noreply.github.com>"]
description = "osmia as a wasm npm package"
license = "GPL-3.0-or-later"
repository = "https://github.com/jkutkut/osmia-npm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
osmia = { git = "https://github.com/jkutkut/osmia", features = [ "dumper", "detailed-dumper" ] }
wasm-bindgen = "0.2.100"

[dev-dependencies]
macro_test = { git = "https://github.com/jkutkut/rust-macro-test", tag = "v1.3.0" }
